app/styles/app.css
/* ... */
.article :where(tbody tr):not(:where([class~="not-prose"] *)){
  border-bottom-width: 1px;
  border-bottom-color: var(--tw-prose-td-borders);
}
.article :where(tbody tr:last-child):not(:where([class~="not-prose"] *)){
  border-bottom-width: 0;
}
.article :where(tbody td):not(:where([class~="not-prose"] *)){
  vertical-align: baseline;
}
.article :where(tfoot):not(:where([class~="not-prose"] *)){
  border-top-width: 1px;
  border-top-color: var(--tw-prose-th-borders);
}
.article :where(tfoot td):not(:where([class~="not-prose"] *)){
  vertical-align: top;
}
.article{
  --tw-prose-body: #374151;
  --tw-prose-headings: #111827;
  --tw-prose-lead: #4b5563;
  --tw-prose-links: #111827;
  --tw-prose-bold: #111827;
  --tw-prose-counters: #6b7280;
  --tw-prose-bullets: #d1d5db;
  --tw-prose-hr: #e5e7eb;
  --tw-prose-quotes: #111827;
  --tw-prose-quote-borders: #e5e7eb;
  --tw-prose-captions: #6b7280;
  --tw-prose-code: #111827;
  --tw-prose-pre-code: #e5e7eb;
  --tw-prose-pre-bg: #1f2937;
  --tw-prose-th-borders: #d1d5db;
  --tw-prose-td-borders: #e5e7eb;
  --tw-prose-invert-body: #d1d5db;
  --tw-prose-invert-headings: #fff;
  --tw-prose-invert-lead: #9ca3af;
  --tw-prose-invert-links: #fff;
  --tw-prose-invert-bold: #fff;
  --tw-prose-invert-counters: #9ca3af;
  --tw-prose-invert-bullets: #4b5563;
  --tw-prose-invert-hr: #374151;
  --tw-prose-invert-quotes: #f3f4f6;
  --tw-prose-invert-quote-borders: #374151;
  --tw-prose-invert-captions: #9ca3af;
  --tw-prose-invert-code: #fff;
  --tw-prose-invert-pre-code: #d1d5db;
  --tw-prose-invert-pre-bg: rgba(0, 0, 0, 0.5);
  --tw-prose-invert-th-borders: #4b5563;
  --tw-prose-invert-td-borders: #374151;
  font-size: 1rem;
  line-height: 1.75;
}
.article :where(video):not(:where([class~="not-prose"] *)){
  margin-top: 2em;
  margin-bottom: 2em;
}
.article :where(figure):not(:where([class~="not-prose"] *)){
  margin-top: 2em;
  margin-bottom: 2em;
}
.article :where(li):not(:where([class~="not-prose"] *)){
  margin-top: 0.5em;
  margin-bottom: 0.5em;
}
.article :where(ol > li):not(:where([class~="not-prose"] *)){
  padding-left: 0.375em;
}
.article :where(ul > li):not(:where([class~="not-prose"] *)){
  padding-left: 0.375em;
}
.article :where(.prose > ul > li p):not(:where([class~="not-prose"] *)){
  margin-top: 0.75em;
  margin-bottom: 0.75em;
}
.article :where(.prose > ul > li > *:first-child):not(:where([class~="not-prose"] *)){
  margin-top: 1.25em;
}
.article :where(.prose > ul > li > *:last-child):not(:where([class~="not-prose"] *)){
  margin-bottom: 1.25em;
}
.article :where(.prose > ol > li > *:first-child):not(:where([class~="not-prose"] *)){
  margin-top: 1.25em;
}
.article :where(.prose > ol > li > *:last-child):not(:where([class~="not-prose"] *)){
  margin-bottom: 1.25em;
}
.article :where(ul ul, ul ol, ol ul, ol ol):not(:where([class~="not-prose"] *)){
  margin-top: 0.75em;
  margin-bottom: 0.75em;
}
.article :where(hr + *):not(:where([class~="not-prose"] *)){
  margin-top: 0;
}
.article :where(h2 + *):not(:where([class~="not-prose"] *)){
  margin-top: 0;
}
.article :where(h3 + *):not(:where([class~="not-prose"] *)){
  margin-top: 0;
}
.article :where(h4 + *):not(:where([class~="not-prose"] *)){
  margin-top: 0;
}
.article :where(thead th:first-child):not(:where([class~="not-prose"] *)){
  padding-left: 0;
}
.article :where(thead th:last-child):not(:where([class~="not-prose"] *)){
  padding-right: 0;
}
.article :where(tbody td, tfoot td):not(:where([class~="not-prose"] *)){
  padding-top: 0.5714286em;
  padding-right: 0.5714286em;
  padding-bottom: 0.5714286em;
  padding-left: 0.5714286em;
}
.article :where(tbody td:first-child, tfoot td:first-child):not(:where([class~="not-prose"] *)){
  padding-left: 0;
}
.article :where(tbody td:last-child, tfoot td:last-child):not(:where([class~="not-prose"] *)){
  padding-right: 0;
}
.article :where(.prose > :first-child):not(:where([class~="not-prose"] *)){
  margin-top: 0;
}
.article :where(.prose > :last-child):not(:where([class~="not-prose"] *)){
  margin-bottom: 0;
}
.article{
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 3rem;
  display: grid;
  justify-content: center;
  font-family: "IBMPlexSerif", Palatino, ui-serif;
  --tw-text-opacity: 1;
  color: rgba(2, 6, 23, var(--tw-text-opacity));
}
.article p,
    .article ul,
    .article li{
  margin-bottom: 1rem;
  font-size: 1.125rem;
  line-height: 1.75rem;
}
@media (min-width: 48em){

  .article img{
    margin-left: -2rem;
    margin-right: -2rem;
  }
}
@media (min-width: 64em){

  .article img{
    margin-left: -4rem;
    margin-right: -4rem;
  }
}
@media (min-width: 48em) {
    .article img {
        width: calc(100% + 4rem);
        max-width: 100vw
    }
      }
@media (min-width: 64em) {
    .article img {
        width: calc(100% + 8rem)
    }
      }
.swimlane{
  display: grid;
  width: 100%;
  scroll-snap-type: x var(--tw-scroll-snap-strictness);
  --tw-scroll-snap-strictness: mandatory;
  scroll-padding-left: 1.5rem;
  scroll-padding-right: 1.5rem;
  grid-auto-flow: column;
  justify-content: flex-start;
  grid-gap: 1rem;
  gap: 1rem;
  overflow-x: scroll;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  padding-bottom: 1rem;
}
.sr-only{
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border-width: 0;
}
.pointer-events-none{
  pointer-events: none;
}
.invisible{
  visibility: hidden;
}
.static{
  position: static;
}
.fixed{
  position: fixed;
}
.absolute{
  position: absolute;
}
.relative{
  position: relative;
}
.sticky{
  position: sticky;
}
.inset-0{
  top: 0px;
  right: 0px;
  bottom: 0px;
  left: 0px;
}
.inset-y-0{
  top: 0px;
  bottom: 0px;
}
.bottom-0{
  bottom: 0px;
}
.bottom-1{
  bottom: 0.25rem;
}
.bottom-12{
  bottom: 3rem;
}
.left-0{
  left: 0px;
}
.right-0{
  right: 0px;
}
.right-1{
  right: 0.25rem;
}
.top-0{
  top: 0px;
}
.top-36{
  top: 9rem;
}
.top-nav{
  top: 3rem;
  top: var(--height-nav);
}
/* ... */

